<resources>
    <string name="app_name">Nimesuki</string>
    <string name="username">Nombre de Usuario</string>
    <string name="change_name">Cambiar Nombre</string>
    <string name="current_password">Contraseña Actual</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="dark_mode">Modo Oscuro</string>
    <string name="language">Idioma</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="search_anime">Buscar anime</string>
    <string name="read_more">Mostrar</string>
    <string name="read_less">Ocultar</string>
    <string name="release_year">Año de salida</string>
    <string name="categories">Categorías</string>
    <string name="episodes">Capítulos</string>
    <string name="catalog">Catálogo</string>
    <string name="favorites">Favoritos</string>
    <string name="settings">Ajustes</string>
    <string name="random">Random</string>
    <string name="name_updated_error">Error al actualizar el nome</string>
    <string name="name_updated_successfully">Nombre actualizado con éxito</string>
    <string name="enter_user_and_password">Por favor ingresa usuario y contraseña</string>
    <string name="fill_all_fields">Rellena todos los campos</string>
    <string name="user_exists">Ese usuario ya existe</string>
    <string name="network_error">Error de red</string>
    <string name="registered_successfully">Registrado correctamente</string>
    <string name="register_error">Error al registrar</string>
    <string name="get_user_error">Error al obtener el usuario</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="load_animes_error">Error al cargar los animes</string>
    <string name="load_anime_error">Error al cargar el anime</string>
    <string name="load_favorite_anime_error">Error al cargar los animes favoritos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logout_confirmation">¿Estás seguro de que deseas cerrar la sesión?</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="delete_account_confirmation">¿Estás seguro de que deseas eliminar la cuenta?</string>
    <string name="delete_account_error">Error al eliminar la cuenta, cerrando sesión...</string>
    <string name="delete_account_successfully">Cuenta eliminada con éxito</string>
    <string name="username_no_whitespace_error">El nombre no puede tener espacios</string>
    <string name="password_no_whitespace_error">La contraseña no puede tener espacios</string>
    <string name="configuration">Configuración</string>
    <string name="save">Guardar</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_direccion_ip">Dirección IP</string>
    <string name="create_favourite_anime_error">Error añadiendo el anime a favoritos</string>
    <string name="create_favourite_anime_successfully">Anime añadido a favoritos</string>
    <string name="delete_favourite_anime_error">Error al eliminar el anime de favorito</string>
    <string name="delete_favourite_anime_successfully">Anime eliminado de favoritos</string>
    <string name="error_init_favorites">Error al inicializar los favoritos</string>
    <string name="no_results">No se encontraron animes</string>
    <string name="no_more_animes">Te acabaste la lista... ¿repetimos capítulo?</string>
    <string name="no_connection_retry">Reintentar</string>
    <string name="no_connection">Sin conexión, vuelve a intentarlo</string>
    <string name="unexpected_error">Error inesperado</string>
    <string name="change_password_error">Error al cambiar la contraseña</string>
    <string name="change_password_successfully">Contraseña cambiada con éxito</string>
    <string name="same_password_change">La contraseña no puede ser la misma</string>
    <string name="update_favorite_successfully">Favorito modificado con éxito</string>
    <string name="update_favorite_error">Error al modificar favorito</string>
    <string name="username_empty_error">Nombre de usuario vacío</string>
    <string name="same_username_error">El nombre de usuario es el mismo</string>
</resources>
